openshift/openshift.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: image-app
spec:
  replicas: 3
  selector:
    app: image
  template:
    metadata:
      labels:
        app: image
    spec:
      containers:
        - name: web
          image: image-app:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "300m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
      strategy:
        type: Rolling
        rollingParams:
          updatePeriodSeconds: 1
          intervalSeconds: 1
          timeoutSeconds: 600
          maxUnavailable: 25%
          maxSurge: 25%
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - web
        from:
          kind: ImageStreamTag
          namespace: bobbybabu007-dev
          name: 'image-app:latest'
---
apiVersion: v1
kind: Service
metadata:
  name: image-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: image
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: image-app
spec: 
  port:
    targetPort: 5000
  to:
    kind: Service
    name: image-app
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
